--- a/main.html
+++ b/main.html
@@ -6,12 +6,18 @@
 	<head>
 		<title>Statistics Calculator</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<!-- <script src="jquery-1.10.2.min.js"></script> -->
-        <link rel=stylesheet href="../../../Unnamed Site 2/main.css" type="text/css">
+		<script src="http://cdn.jsdelivr.net/jstat/1.1.3/jstat.min.js"></script>
+		
+<!-- 		<script src="../lib/jquery-1.10.2.min.js"></script>
+		<script src="../lib/jstat.min.js"></script> -->
+		<script src="lined_ta/jquery-linedtextarea.js"></script>
+		
+        <link rel=stylesheet href="main.css" type="text/css">
         <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
-    <script src=mainjs.js></script>
-	<script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
-</head>
+		<link rel="stylesheet" type="text/css" href="lined_ta/jquery-linedtextarea.css">
+		<script src="mainjs.js"></script>
+		<script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
+	</head>
 	
 	<body>
 		<img id ="header"src="../../../Unnamed Site 2/header-analytics.jpg" width=100% height="100">
@@ -63,10 +69,19 @@
     </ul>
 	
     <div id="calculator">
-<h3>Enter number separated by space:</h3>
-	<textarea rows=10 cols=20 id="numbers"></textarea>
+	<h3>Enter number separated by space:</h3>
+	<textarea rows=20% cols=90% id="dataset"></textarea>
+	
 		<br />
-		<button type=button id="calcmedian" onClick="getMedian()">Get Median</button>
+		<button type=button id="calcMean">Get Mean</button><br />
+		<button type=button id="calcMedian">Get Median</button> <br />
+		<button type=button id="calcMode">Get Mode</button> <br />
+		<button type=button id="calcStdDev">Get Std Deviation</button> <br />
+		<button type=button id="calcVariance">Get Variance</button> <br />
+		<button type=button id="calcRange">Get Range</button> <br />
+		<button type=button id="calcSkewness">Get Skewness</button> <br />
+		<button type=button id="calcCoeffvar">Get Coefficient Variation</button> <br />
+		<button type=button id="calcKurtosis">Get Kurtosis</button> <br />
 		<h5 id="answer">Median: </h5>
     </div>
     <script type="text/javascript">
