--- a/main.html
+++ b/main.html
@@ -7,9 +7,11 @@
 		<title>Statistics Calculator</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="http://cdn.jsdelivr.net/jstat/1.1.3/jstat.min.js"></script>
+		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		
 <!-- 		<script src="../lib/jquery-1.10.2.min.js"></script>
-		<script src="../lib/jstat.min.js"></script> -->
+		<script src="../lib/jstat.min.js"></script>
+		<script src="../lib/d3.min.js" charset="utf-8"></script> -->
 		<script src="lined_ta/jquery-linedtextarea.js"></script>
 		
         <link rel=stylesheet href="main.css" type="text/css">
@@ -69,7 +71,7 @@
     </ul>
 	
     <div id="calculator">
-	<h3>Enter number separated by space:</h3>
+	<h3>Enter Dataset Values:</h3>
 	<textarea rows=20% cols=90% id="dataset"></textarea>
 	
 		<br />
@@ -82,7 +84,16 @@
 		<button type=button id="calcSkewness">Get Skewness</button> <br />
 		<button type=button id="calcCoeffvar">Get Coefficient Variation</button> <br />
 		<button type=button id="calcKurtosis">Get Kurtosis</button> <br />
+		<button type=button id="generateBarGraph">I Bar Grap Na itu</button> <br />
 		<h5 id="answer">Median: </h5>
+		
+		
+		<div id="chart">
+			<div class="bargraph"></div>
+		</div>
+		
+		<br /><br /><br />
+		
     </div>
     <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
