--- a/main.html
+++ b/main.html
@@ -9,9 +9,7 @@
 		<script src="http://cdn.jsdelivr.net/jstat/1.1.3/jstat.min.js"></script>
 		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		
-<!-- 		<script src="../lib/jquery-1.10.2.min.js"></script>
-		<script src="../lib/jstat.min.js"></script>
-		<script src="../lib/d3.min.js" charset="utf-8"></script> -->
+		
 		<script src="lined_ta/jquery-linedtextarea.js"></script>
 		
         <link rel=stylesheet href="main.css" type="text/css">
@@ -85,6 +83,9 @@
 		<button type=button id="calcCoeffvar">Get Coefficient Variation</button> <br />
 		<button type=button id="calcKurtosis">Get Kurtosis</button> <br />
 		<button type=button id="generateBarGraph">I Bar Grap Na itu</button> <br />
+		<button type=button id="generateFreqTable">Frequency Distribution Table</button> <br />
+		<button type=button id="generateRandData">Genrate Random Data Set</button> <br />
+		
 		<h5 id="answer">Median: </h5>
 		
 		
