pie chart available
rage mode!!!!

--- a/main.html
+++ b/main.html
@@ -85,6 +85,7 @@
 		<button type=button id="generateBarGraph">I Bar Grap Na itu</button> <br />
 		<button type=button id="generateFreqTable">Frequency Distribution Table</button> <br />
 		<button type=button id="generateRandData">Genrate Random Data Set</button> <br />
+		<button type=button id="generatePieChart">PI(3.14) chart</button> <br />
 		
 		<h5 id="answer">Median: </h5>
 		
