Additional Visualization and iqr working
mac, fix gui and upload latest

What's new:
Boxplot, IQR

--- a/main.html
+++ b/main.html
@@ -87,6 +87,9 @@
 		<button type=button id="generateFreqTable" class="Buttons">Frequency Distribution Table</button> 
 		<button type=button id="generateRandData" class="Buttons">Genrate Random Data Set</button> 
 		<button type=button id="generatePieChart" class="Buttons">PI(3.14) chart</button> <br />
+		<button id="generateBoxplot">Generate Box Plot</button> <br />
+		<button id="calcIQR">Get Inter-qartile rang</button> <br />
+		
 		</div>
 		<h5 id="answer">Median: </h5>
 		
