--- a/main.html
+++ b/main.html
@@ -5,14 +5,12 @@
 <html>
 	<head>
 		<title>Statistics Calculator</title>
-<!-- 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="http://cdn.jsdelivr.net/jstat/1.1.3/jstat.min.js"></script>
-		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
+		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		
 		
-		<script src="../lib/jquery-1.10.2.min.js"></script>
-		<script src="../lib/jstat.min.js"></script>
-		<script src="../lib/d3.min.js"></script>
+		
 		<script src="lined_ta/jquery-linedtextarea.js"></script>
 		<link rel="stylesheet" href="bootstrap-3.3.4-dist/css/bootstrap.min.css" type="text/css">
         <link rel=stylesheet href="main.css" type="text/css">
@@ -49,7 +47,7 @@
 		  <li role="presentation" class="dropdown-header">Percentiles</li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="#" id="calcPercRank">Percentile Rank</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="#" id="quartiles">Quartile</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Decile (Under Construction)</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="#" id="calcDecile">Decile</a></li>
           <li role="presentation" class="divider"></li>
 		  <li role="presentation" class="dropdown-header">Visuals</li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="#" id="generateBarGraph">Bar Graph</a></li>
